--- a/style.css
+++ b/style.css
@@ -135,6 +135,17 @@ nav li {
     font-family: "Open Sans";
 }
 
+#contact-icons-container li {
+        display: inline-block;
+        margin: 18px 10px;
+}
+#contact-icons-container a {
+    opacity: 0.4;
+}
+#contact-icons-container a:hover {
+    opacity: 1.0;
+}
+
 
 
 
@@ -180,6 +191,21 @@ nav li {
         font-size: 150px;
         margin-right: 25px;
     }
+    .mainpage-qmark, .mainpage-atsign {
+        color: #485890;
+        font-size: 180px;
+        line-height: 70%;
+        margin-right: 15px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+    .mainpage-qmark {
+        font-family: Oswald;
+        font-size: 200px;
+        margin-right: 30px;
+    }
     .heading-icon {
         display: none;
     }
@@ -224,6 +250,14 @@ nav li {
     #title p {
         font-size: 20px;
     }
+    
+    #contact-icons-container {
+        width: 600px;
+        padding: 0;
+        margin: auto;
+        border: 0px solid;
+    }
+    
 }
 
 @media screen and (min-width: 1200px) {
